--- a/cricketWeb/web/template.xhtml
+++ b/cricketWeb/web/template.xhtml
@@ -40,13 +40,12 @@
                     </button>
                     <div class="collapse navbar-collapse" id="collapsibleNavbar">
                         <ul class="navbar-nav float-right">
-                           
+
                             <li class="nav-item">
-                                <h:link outcome="editProfile">
+                                <h:commandLink action="#{sessionBean.editUser(sessionBean.email)}">
                                     #{bundle.User}
                                     <img src="https://img.icons8.com/color/48/000000/gender-neutral-user.png"></img>
-                                </h:link>
-                                
+                                </h:commandLink>
                             </li>
 
                             <li class="nav-item">
