--- a/cricketWeb/web/template.xhtml
+++ b/cricketWeb/web/template.xhtml
@@ -126,7 +126,7 @@
                 <div class="col-12">
                     <div class="container">
                         <div class="copyright">
-                            &copy; Copyright <strong>7 Homens 1 Desafio</strong>. All Rights Reserved
+                            &copy; Copyright <strong>7 Homens 1 Desafio</strong>| <img  src="#{resource['images/isec.png']}" style="height:25px;width:25px;"  />|<Strong>UC:</Strong> PS. <Strong> Professor:</Strong> João Cunha. <Strong>All Rights Reserved</Strong>
                         </div>
                     </div>
                 </div>
