--- a/cricketWeb/web/dashboard.xhtml
+++ b/cricketWeb/web/dashboard.xhtml
@@ -78,10 +78,11 @@ and open the template in the editor.
                 </c:if>
 
                 <h:form>
+                    <center>
                     <h:commandLink action="#{goalBean.addGoal}">
                         <img src="https://img.icons8.com/office/80/000000/plus-2-math.png"></img>
                     </h:commandLink>
-
+                    </center>
                     <br></br>
                     <br></br>
 
