--- a/cricketWeb/web/indexCategories.xhtml
+++ b/cricketWeb/web/indexCategories.xhtml
@@ -47,11 +47,12 @@ and open the template in the editor.
                     </div>
                 </c:if>
 
-                <h:form>
+                <h:form> 
+                    <center>
                     <h:commandLink action="#{categoryBean.createCategory}">
                         <img src="https://img.icons8.com/office/80/000000/plus-2-math.png"></img>
                     </h:commandLink>
-
+                    </center>
                     <br></br>
                     <br></br>
 
