--- a/cricketWeb/web/index.xhtml
+++ b/cricketWeb/web/index.xhtml
@@ -52,7 +52,7 @@ and open the template in the editor.
 <!--                        <h:outputText value="#{bundle.UserPassword}" style="font-weight: bold;"/>-->
                         <h:panelGrid id = "pass" columns = "2" >
                             <img src="https://img.icons8.com/office/40/000000/lock-2.png"></img>
-                            <h:inputSecret id="password" a:placeholder="password" value="#{sessionBean.password}" required="true" requiredMessage="Password is required"></h:inputSecret><br/>
+                            <h:inputSecret id="password" a:placeholder="password" value="#{sessionBean.password}" required="true" requiredMessage="Password is required"></h:inputSecret>
 
                         </h:panelGrid>
 
@@ -70,23 +70,43 @@ and open the template in the editor.
 
                         <h:messages />
 
-                        <h:outputText value="#{bundle.UserEmail}" style="font-weight: bold;"/><br/>
-                        <h:inputText value="#{sessionBean.email}" required="true" requiredMessage="Email is required"/><br/>
-                        <h:outputText value="#{bundle.UserFullName}" style="font-weight: bold;"/><br/>
-                        <h:inputText value="#{sessionBean.clientName}" required="true" requiredMessage="Name is required"/><br/>
-                        <h:outputText value="#{bundle.UserBirthDate}" style="font-weight: bold;"/><br/>
-                        <h:inputText value="#{sessionBean.birthTmp}"  styleClass = "form-control datepicker" required="true" requiredMessage="Birthday is required"></h:inputText><br/>
-                        <h:outputText value="#{bundle.UserPassword}" style="font-weight: bold;" /><br/>
-                        <h:inputSecret value="#{sessionBean.password}"  required="true" requiredMessage="Password is required"/><br/>
-                        <h:outputText value="#{bundle.UserRetypePassword}" style="font-weight: bold;" /><br/>
-                        <h:inputSecret value="#{sessionBean.passwordConfirmation}" style="font-weight: bold;" required="true" requiredMessage="Password confirmation is required"/><br/>
-                        <h:outputText value="#{bundle.UserGender}" style="font-weight: bold;"/><br/>
+                        <h:panelGrid id = "email2" columns = "2" >
+                            <img src="https://img.icons8.com/ultraviolet/40/000000/new-post.png"></img>
+                            <h:inputText value="#{sessionBean.email}" a:placeholder="Email" required="true" requiredMessage="Email is required"/>
+                        </h:panelGrid>
 
-                        <h:selectOneRadio value="#{sessionBean.gender}"  required="true"  requiredMessage="Gender is required" class="radio">
-                            <f:selectItem itemValue="MALE" itemLabel="Male" />
-                            <f:selectItem itemValue="WOMAN" itemLabel="Woman" />
-                        </h:selectOneRadio>
-                        <br/>
+
+                        <h:panelGrid id = "name2" columns = "2" >
+                            <img src="https://img.icons8.com/office/40/000000/employee-card.png"></img>
+                            <h:inputText value="#{sessionBean.clientName}" a:placeholder="Name" required="true" requiredMessage="Name is required"/>
+                        </h:panelGrid>
+
+
+                        <h:panelGrid id = "birthday" columns = "2" >
+                            <img src="https://img.icons8.com/office/40/000000/birthday.png"></img>
+                            <h:inputText value="#{sessionBean.birthTmp}" a:autocomplete="28/05/2019" styleClass = "form-control datepicker" required="true" requiredMessage="Birthday is required"></h:inputText>
+                        </h:panelGrid>
+
+
+                        <h:panelGrid id = "pass2" columns = "2" >
+                            <img src="https://img.icons8.com/office/40/000000/lock-2.png"></img>
+                            <h:inputSecret value="#{sessionBean.password}" a:placeholder="Password" required="true" requiredMessage="Password is required"/>
+                        </h:panelGrid>
+
+                        <h:panelGrid id = "pass2confirm" columns = "2" >
+                            <img src="https://img.icons8.com/color/40/000000/re-enter-pincode.png"></img>
+                            <h:inputSecret value="#{sessionBean.passwordConfirmation}" a:placeholder="Retype password" required="true" requiredMessage="Password confirmation is required"/>
+                        </h:panelGrid>
+
+                        <h:panelGrid id = "gender2" columns = "2" >
+                            <img src="https://img.icons8.com/office/40/000000/gender.png"></img>
+                            <h:selectOneRadio value="#{sessionBean.gender}"  required="true"  requiredMessage="Gender is required" class="radio">
+                                <f:selectItem itemValue="MALE" itemLabel="Male" />
+                                <f:selectItem itemValue="WOMAN" itemLabel="Woman" />
+                            </h:selectOneRadio>
+                        </h:panelGrid>
+
+
                         <br/>
                         <center><h:commandButton class ="btn btn-info" action="#{sessionBean.process_SignUp}" value="#{bundle.SignUp}"></h:commandButton></center>
                     </h:form>
