--- a/cricketWeb/web/indexTrophy.xhtml
+++ b/cricketWeb/web/indexTrophy.xhtml
@@ -61,7 +61,8 @@ and open the template in the editor.
                                     <div class="col-10">
                                         <div class="row">
                                             <div class="col-8" style="font-weight: bold;">
-                                                #{trophyTmp.nome}
+                                                <img src="https://img.icons8.com/color/48/000000/gold-medal.png"></img>#{trophyTmp.nome}
+                                              
                                             </div>    
 
                                             <div class="col-3">
