--- a/cricketWeb/web/dashboard.xhtml
+++ b/cricketWeb/web/dashboard.xhtml
@@ -32,7 +32,7 @@ and open the template in the editor.
                 <h3>#{bundle.GoalListTitle}</h3>
                 <p> #{bundle.GoalListDesc}</p>
 
-                <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#filters">#{bundle.GoalListFiltersButton}</button>
+                <button type="button" class="meubotao btn btn-info" data-toggle="collapse" data-target="#filters">#{bundle.GoalListFiltersButton}</button>
                 <div id="filters" class="collapse panel panel-default">
                     <h:form>
                         <br></br>
