--- a/cricketWeb/web/login.xhtml
+++ b/cricketWeb/web/login.xhtml
@@ -12,13 +12,13 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <!--===============================================================================================-->	
-        <link rel="icon" type="image/png" href="resouces/images/icons/cricket.ico" />
+        <link rel="icon" type="image/png" href="resources/images/icons/cricket.ico" />
         <!--===============================================================================================-->
-        <link rel="stylesheet" type="text/css" href="resouces/vendor/bootstrap/css/bootstrap.min.css" />
+        <link rel="stylesheet" type="text/css" href="resources/vendor/bootstrap/css/bootstrap.min.css" />
         <!--===============================================================================================-->
-        <link rel="stylesheet" type="text/css" href="resouces/fonts/font-awesome-4.7.0/css/font-awesome.min.css" />
+        <link rel="stylesheet" type="text/css" href="resources/fonts/font-awesome-4.7.0/css/font-awesome.min.css" />
         <!--===============================================================================================-->
-        <link rel="stylesheet" type="text/css" href="resouces/vendor/animate/animate.css" />
+        <link rel="stylesheet" type="text/css" href="resources/vendor/animate/animate.css" />
         <!--===============================================================================================-->	
         <link rel="stylesheet" type="text/css" href="resources/vendor/css-hamburgers/hamburgers.min.css" />
         <!--===============================================================================================-->
@@ -68,13 +68,13 @@
                                     Forgot
                                 </span>
                                 <a class="txt2" href="#">
-                                    Username / Password?
+                                    your credentials?
                                 </a>
                             </div>
 
                             <div class="text-center p-t-136">
                                 <a class="txt2" href="#">
-                                    Create your Account
+                                    Become a Jimmy
                                     <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true" />
                                 </a>
                             </div>
