--- a/cricketWeb/web/login.xhtml
+++ b/cricketWeb/web/login.xhtml
@@ -51,7 +51,7 @@
                             </div>
 
                             <div class="wrap-input100 validate-input" data-validate="Password is required">
-                                <h:inputText class="input100" id="password" a:placeholder="password" value="#{sessionBean.password}" required="true" requiredMessage="Password is required"></h:inputText>
+                                <h:inputSecret class="input100" id="password" a:placeholder="password" value="#{sessionBean.password}" required="true" requiredMessage="Password is required"></h:inputSecret>
                                     <span class="focus-input100" />
                                     <span class="symbol-input100">
                                         <i class="fa fa-lock" aria-hidden="true" />
@@ -73,10 +73,8 @@
                             </div>
 
                             <div class="text-center p-t-136">
-                                <a class="txt2" href="registerUser.xhtml">
-                                    Become a Jimmy
-                                    <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true" />
-                                </a>
+                                <a href="/cricketWeb/faces/registerUser.xhtml">Become a Jimmy</a>
+                                <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true" />
                             </div>
                     </h:form>
                 </div>
