--- a/cricketWeb/web/registerUser.xhtml
+++ b/cricketWeb/web/registerUser.xhtml
@@ -75,7 +75,7 @@
                             </div>
                         
                             <div class="wrap-input100 validate-input" data-validate="Birthday is required">
-                                <h:inputText class="input100" id="birthday" a:placeholder="DD/mm/AAAA" value="#{sessionBean.birthTmp}" required="true" requiredMessage="Birthday is required"></h:inputText>
+                                <h:inputText styleClass="input100 form-control datepicker" id="birthday" a:placeholder="DD/mm/AAAA" value="#{sessionBean.birthTmp}" required="true" requiredMessage="Birthday is required"></h:inputText>
                                     <span class="focus-input100" />
                                     <span class="symbol-input100">
                                         <i class="fa fa-calendar" aria-hidden="true" />
