--- a/cricketWeb/web/template.xhtml
+++ b/cricketWeb/web/template.xhtml
@@ -45,12 +45,14 @@
                     <div class="collapse navbar-collapse" id="collapsibleNavbar">
                         <ul class="navbar-nav float-right">
 
+                            <!--
                             <li class="nav-item">
                                 <h:commandLink action="#{sessionBean.editUser(sessionBean.email)}" style="color:white;">
                                     #{bundle.User}
                                     <img src="https://img.icons8.com/color/48/000000/gender-neutral-user.png"></img>
                                 </h:commandLink>
                             </li>
+                            -->
 
                             <li class="nav-item">
                                 <h:link outcome="indexHistory" style="color:white;">
@@ -99,11 +101,6 @@
                 <div class="col-2"></div>
                 <div class="col-8">
                     <div class="container">
-                        <h:form rendered="#{sessionBean.isLogged}">
-
-
-                        </h:form>         
-
                         <header class="section-header">
                             <div class="jumbotron">
                                 <ui:insert name="containerTitle">Default Title</ui:insert>   
@@ -137,6 +134,11 @@
             </div>
         </div>
 
+        <script>
+            $(document).ready(function(){
+              $('[data-toggle="tooltip"]').tooltip();   
+            });
+        </script>
         <!-- DatePicker JavaScript & CSS -->
         <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.js"></script>
         <script type="text/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
